<resources>

    <!--    <string-array name="District_Name">-->

    <!--        <item>aaa</item>-->
    <!--        <item>fff</item>-->
    <!--        <item>asssaa</item>-->
    <!--        <item>assaa</item>-->

    <!--    </string-array>-->

    <string-array name="Route_Name">

        <item>The convention route to the Sundarbans- Supoti</item>
        <item>The convention route to the Sundarbans- Burigoalini/Munsiganj</item>
        <item>The convention route to the Sundarbans- Mongla</item>

    </string-array>


    <string-array name="Tourist_types">

        <item>Local Tourist</item>
        <item>Foreign Tourist</item>
        <item>Local Student</item>
        <item>Child</item>


    </string-array>

    <string-array name="Spot_Name">

        <item>Doplar Char</item>
        <item>Hiron Point</item>
    </string-array>

    <string name="app_name">Sundarban</string>
    <string name="app_full_name">Eco-Tourism Sundarban</string>
    <string name="departmnet">Forest Department</string>
    <string name="sundor_bon">Sundarban</string>
    <string name="sundorbon_slogan">Save Sundarban, Live Humane Life</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="update_app_version">New version is available. Please update Sundarban</string>
    <string name="action_update">Update</string>
    <string name="switchToBangla">Switch to Bangla</string>
    <string name="switchToEnglish">Switch to English</string>
    <string name="action_search">অনুসন্ধান করুন</string>
    <string name="label_financial_year"> Financial Year</string>
    <string name="label_division">Division</string>
    <string name="label_district">District</string>
    <string name="label_upazila">Upazila</string>
    <string name="label_union">Union Council</string>
    <string name="check_gps_data_latitude">Latitude : </string>
    <string name="check_gps_data_longitude">Longitude : </string>
    <string name="check_gps_data_date">Date : </string>
    <string name="select_image_file">Select an Image File.</string>
    <string name="login">Login</string>
    <string name="label_remember_me">Remember me</string>
    <string name="logout">Logout</string>
    <string name="label_user">Users</string>
    <string name="message_error_userpass">User name/password is not correct</string>
    <string name="message_error_server_invalid">Sorry Invalid Server.</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="logout_confirmation_msg">আপনি কি অ্যাপ থেকে বের হতে চান?</string>
    <string name="cancel">cancel</string>
    <string name="AddVesselsBtnTxt">Add Vessels</string>
    <string name="securityGuardTxt">Security Guard</string>
    <string name="entryTimeTxt">Time of entry</string>
    <string name="visitDateTxt">Date of visit</string>
    <string name="startingPointTxt">Choose Starting Point</string>
    <string name="spotChoiceTxt">Use the checkmark to select a spot ...</string>
    <string name="securityGuardDescriptionTxt">Armed security guards will keep you safe from wildlife encounter during the jungle safari.</string>

    <string name="Registered">Registered</string>
    <string name="myCartTxt">My Cart</string>
    <string name="menu_regAndRenew">Registration/Renew Application</string>
    <string name="menu_tourPermission">Tour permission application</string>
    <string name="Unregistered">Unregistered</string>
    <string name="save">save</string>
    <string name="book_now">Book Now</string>
    <string name="dashboard">Dashboard</string>
    <string name="label_change_password">পাসওয়ার্ড পরিবর্তন</string>
    <string name="label_user_name">User Name</string>
    <string name="label_password">Password</string>
    <string name="label_current_password">বর্তমান পাসওয়ার্ড</string>
    <string name="label_new_password">নতুন পাসওয়ার্ড</string>
    <string name="confirm_new_password">নতুন পাসওয়ার্ড নিশ্চিত করুন</string>
    <string name="error_message_username">ব্যবহারকারীর নাম লিখুন</string>
    <string name="error_message_current_pass">বর্তমান পাসওয়ার্ড লিখুন</string>
    <string name="error_message_new_pass">নতুন পাসওয়ার্ড লিখুন</string>
    <string name="error_message_pass_match">পাসওয়ার্ড মেলেনি। আবার চেষ্টা করুন</string>
    <string name="button_change_password">পাসওয়ার্ড পরিবর্তন করুন</string>
    <string name="message_internet_con">আপনার ইন্টারনেট সংযোগ পরীক্ষা করুন. আপনার ডিভাইসে কোনও সক্রিয় ইন্টারনেট সংযোগ নেই</string>
    <string name="message_loading">লোডিং..., অনুগ্রহ করে অপেক্ষা করুন</string>
    <string name="message_confirm">নিশ্চিতকরণ</string>
    <string name="label_confirmation">আপনি কি নিশ্চিত?</string>
    <string name="pick">বাছাই</string>
    <string name="message_enter_password">পাসওয়ার্ড লিখুন</string>
    <string name="message_select_financial_year">Please select a financial year</string>
    <string name="message_select_division">Please select a division</string>
    <string name="message_select_district">Please select a district</string>
    <string name="message_select_upazila">Please select a upazila</string>
    <string name="message_select_union_ward">Please select a union</string>
    <string name="label_male">Male</string>
    <string name="label_female">Female</string>
    <string name="label_yes">Yes</string>
    <string name="label_no">No</string>
    <string name="label_not_known">Not Known</string>
    <string name="label_active">Active</string>
    <string name="label_inactive">Inactive</string>
    <string name="up_assset_unit_price_taka">৳</string>
    <string name="label_select">Select</string>
    <string name="label_designation">Designation</string>
    <string name="label_gender">Gender</string>
    <string name="label_location">Location</string>
    <string name="label_address">Address</string>
    <string name="label_name_en">Name in English</string>
    <string name="label_description">Description</string>
    <string name="label_filter">Filter</string>
    <string name="label_search">Search</string>
    <string name="label_clear_filter">Clear Filter</string>
    <string name="label_clear">Clear</string>
    <string name="label_reset">Reset</string>
    <string name="label_submit">Submit</string>
    <string name="label_update">Update</string>
    <string name="label_required_sign"> <sup>*</sup> </string>
    <string name="message_success_financial_year">Financial Year Data Synced successfully.</string>
    <string name="message_error_no_financial_year">Financial Year Data not found.</string>
    <string name="message_error_no_spot_route">Spot and Route Data not found.</string>
    <string name="Spot_hint">Select The Spot</string>
    <string name="Route_hint">Select The Route</string>

    <string name="search">Search</string>
    <string name="message_enter_user_name">অনুগ্রহ করে ব্যবহারকারীর নাম লিখুন</string>

    <!--    write new string from here-->

    <string-array name="Spot_Name_list">

        <item>Dobeki</item>
        <item>Harbaria</item>
        <item>kalagachia</item>
        <item>karamjal</item>

    </string-array>


    <string name="welcome_dialogue">WELCOME TO ECO-TOURISM IN SUNDARBANS</string>
    <string name="final_warning">All required field must be selected</string>
    <string name="passport_warning">Passport Number required</string>


    <string name="label_one_day_tour">One Day Tour Ticket</string>
    <string name="message_error_no_district">District Data not found.</string>
    <string name="leble_headline">CARE NATURE AS IT CARES YOU.</string>

    <string name="slider_image_info">Maximum 1500 tourist per day</string>

    <string name="over_night_form">Book for this package</string>

    <string name="pay_button_txt">Confirm and pay now</string>
    <string name="cart_button_txt">Add to Cart</string>
    <string name="passport_button_txt">Submit</string>
    <string name="download_as_pdf">Download as PDF</string>

    <string name="total_info_operator">Tour Operators</string>
    <string name="total_info_package">Packages</string>
    <string name="total_info_vessels">Vessels</string>

    <string name="message_field_mandatory">This field is mandatory</string>
    <string name="warning_mobile_length">Mobile number must be 11 digits</string>
    <string name="warning_option_type">* The Choice is Required</string>


    <string name="tracking_number">Tracking Number</string>
    <string name="ticket_number">Ticket Number</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="application_for">Application For<font color='#FF0000'> *</font></string>

    <string name="Tour_operator_name">Tour operator name<font color='#FF0000'>*</font></string>
    <string name="tour_date">Tour Date</string>
    <string name="menu_my_ticket">My Ticket</string>
    <string name="menu_tour_ticket">Tour Ticket</string>
    <string name="menu_over_night_booking">Over Night Booking</string>
    <string name="menu_booking_list">Booking List</string>
    <string name="menu_language_switch">Switch to Bangla</string>
    <string name="view_ticket">View Ticket</string>
    <string name="applicant_name">Applicant Name</string>
    <string name="sports">Spots</string>
    <string name="date_of_travel">Date of Travel</string>
    <string name="entry_time">Entry Time</string>
    <string name="get_my_ticket">Get your one day ticket</string>
    <string name="menu_my_profile">My Profile</string>
    <string name="view_your_profile">View Your Profile</string>
    <string name="day">Days</string>
    <string name="night">Night</string>
    <string name="taka">Taka</string>
    <string name="persons">Persons</string>
    <string name="fee">Fee</string>
    <string name="total">Total</string>
    <string name="total_reviews">Total Reviews</string>
    <string name="total_trips">Total Trips</string>
    <string name="today_tickets">Today Ticket</string>
    <string name="travel_history">travel History</string>
    <string name="price_not_defined">Price not defined yet.</string>
    <string name="have_to_login_as_a_visitor">You have to log in as a Visitor, to submit booking information.</string>
    <string name="booking_info">With these information above, someone from the operator will contact you soon with more details about the confirmation of the booking.</string>

    <string name="vessle_type">Vessel Type<font color='#FF0000'> *</font></string>
    <string name="vessel_category">Vessel Category<font color='#FF0000'> *</font></string>
    <string name="size">Size<font color='#FF0000'> *</font></string>

    <!--    end New String-->


    <string name="design_develop_by">Designed and developed by <a href="https://technovista.com.bd/">Technovista Limited</a></string>
    <string name="technovista_limited">TechnoVista Limited</string>


    <string-array name="empty_array_list">
        <item>Select</item>
    </string-array>

    <string-array name="yes_no_status">
        <item>Yes</item>
        <item>No</item>
    </string-array>

    <string-array name="status_active_inactive">
        <item>Active</item>
        <item>Inactive</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->


</resources>