<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view"
    android:scrollbars="horizontal">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/btnHome"
            android:icon="@drawable/ic_home_black_24"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/dashboard"
            android:icon="@drawable/ic_home_black_24"
            android:title="@string/dashboard" />

        <item
            android:id="@+id/myProfile"
            android:icon="@drawable/ic_user_gray"
            android:title="@string/menu_my_profile" />

        <item
            android:id="@+id/myTicket"
            android:icon="@drawable/ic_ticket_maynul"
            android:title="@string/menu_my_ticket" />

        <item
            android:id="@+id/idOneDayTourTicket"
            android:icon="@drawable/tour_24"
            android:title="@string/menu_tour_ticket" />


        <item
            android:id="@+id/idOverNight"
            android:icon="@drawable/ic_baseline_over_night_24"
            android:title="@string/menu_over_night_booking" />


        <item
            android:id="@+id/btn_regAndRenew"
            android:icon="@drawable/ic_baseline_app_registration"
            android:title="@string/menu_regAndRenew" />


        <item
            android:id="@+id/btn_tourPermissionApplication"
            android:icon="@drawable/ic_baseline_tour_application24"
            android:title="@string/menu_tourPermission" />

        <item
            android:id="@+id/idBookingList"
            android:icon="@drawable/ic_view_list_white_24dp"
            android:title="@string/menu_booking_list" />

        <item
            android:id="@+id/languageSwitcher"
            android:icon="@drawable/ic_language_black_24dp"
            android:title="@string/menu_language_switch" />



        <item
            android:id="@+id/btnLogin"
            android:title="@string/login" />
        <item
            android:id="@+id/btnLogout"
            android:title="@string/logout" />

    </group>

    <!-- bold text menu item -->
    <item
        android:id="@+id/text_bold"
        android:title=""
        app:showAsAction="always|withText"
        android:orderInCategory="2"
        />

</menu>
