<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/btn_reactangle_bg_capture_image"
    android:layout_margin="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">

        <TextView
            android:id="@+id/headerTitlePopUpWindow"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".9"
            android:text="@string/passport_warning"
            android:drawableLeft="@drawable/ic_passport"
            android:drawablePadding="10dp"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:gravity="left"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:padding="10dp"/>

        <com.ets.bfd.visitor.utilities.TextAwesome
            android:id="@+id/btnClosePopUpWindow"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:padding="2dp"
            android:layout_marginRight="8dp"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center|center_horizontal|center_vertical"
            android:text="@string/fa_close"
            android:textColor="@color/black"
            android:textSize="8pt"
            android:background="@drawable/bg_circle_white_trans"
            />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"

        android:text="For each foreign tourist, please provide the individual Passport Number."
        android:textColor="#999999"/>




    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:layout_marginBottom="5dp"
        >

        <LinearLayout
            android:id="@+id/lytFaqContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            >

            <com.google.android.material.textfield.TextInputLayout
                android:visibility="gone"
                android:hint="pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <com.google.android.material.textfield.TextInputEditText
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:inputType="text"
                    android:layout_height="match_parent"/>
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/idPassportLayoutRecycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:nestedScrollingEnabled="false"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />


            </androidx.core.widget.NestedScrollView>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="right"
                android:paddingTop="5dp">

                <Button
                    android:id="@+id/idPopupPassportCancelButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/close"
                    android:textAllCaps="false"
                    android:textColor="@color/white"

                    android:layout_margin="2dp"/>

                <Button
                    android:id="@+id/idPopupPassportSaveButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/save"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:layout_margin="2dp"/>

            </LinearLayout>



        </LinearLayout>






    </ScrollView>


</LinearLayout>
